# oak-spacy-demo

./: .cruft.json  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  qc.yml
data/: mondo_subset.db  mondo_subset.owl
docs/: conf.py  index.rst
src/oak_spacy_demo/: __init__.py  cli.py  constants.py  main.py  oak.py  spacy.py
src/oak_spacy_demo/spark/: oak.py  spacy.py
tests/: __init__.py  demo_test.py  test_annotate.py
tests/cache/: mondo_subset.json  mondo_subset_cache.json  ontology_cache.json
tests/input/: test_diseases.tsv
